<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.nized.org.orgnized.HomeFragment"
    android:id="@+id/layout_home"
    android:orientation="vertical">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/undefined"
                android:id="@+id/person_name"
                android:textSize="30dp"
                android:layout_gravity="fill_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/attendances_header"
                android:id="@+id/attendances_header"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/attendances"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/announcements_header"
                android:id="@+id/announcements_header"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/announcements"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/surveys_header"
                android:id="@+id/surveys_header"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/surveys"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>