<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/change_password_progress" style="android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/change_password_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout  android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/prevPassword"
                android:id="@+id/prevPasswordET"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/newPassword"
                android:id="@+id/newPasswordET"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/confirmPassword"
                android:id="@+id/confirmPasswordET"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>